# price_detector_fa

./: .gitignore  gen.org  install.sh  price_detector_fa.org  pyproject.toml  readme.org  test.ipynb
merge/: list_items.py  preprocessing.py  test.ipynb  utils.py
price_detector_fa/: extractors.py  global_variables.py  hardcoded.py  preprocessing.py  samples.py  utils.py
