[tool.poetry]
name = "price-detector-fa"
version = "0.1.0"
description = ""
authors = ["NightMachinery <feraidoonmehri@gmail.com>"]
readme = "readme.org"
packages = [{include = "price_detector_fa"}]

[tool.poetry.dependencies]
# python = "^3.10"
python = "^3.7"
icecream = "^2.1.3"
nltk = "^3.3"
hazm = "^0.7.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
